[project]
name = "writober"
version = "0.1.0"
authors = [{ name = "Joachim Jablon", email = "ewjoachim@gmail.com" }]
description = "Une nouvelle par jour d'octobre sur le thème du mot du jour d'Inktober"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
dependencies = ["daily-writing"]
[dependency-groups]
lint = ["flowmark>=0.5.3"]
local = ["daily-writing[server]"]

[project.urls]
Homepage = "https://writober.ewjoach.im"
Repository = "https://github.com/ewjoachim/writober"

# Un/comment when relevant
# [tool.uv.sources]
# daily-writing = { path = "../daily-writing", editable = true }
